[package]
name = "text-vision"
version = "1.0.0"
description = "TextVision is a project that uses OCR to extract text from images"
authors = ["Ap73MKa"]
license = "MIT"
repository = "https://github.com/Ap73MKa/TextVision"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-unminimize", "window-show", "window-hide", "window-minimize", "window-maximize", "window-unmaximize", "window-close", "window-start-dragging", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
